compacted routes to http methods
